tests/ui/derive_specifier/duplicate_derive_1.stderr
error: encountered duplicate `#[derive_const(Specifier)]` parameter
 --> tests/ui/derive_specifier/duplicate_derive_1.rs:4:21
  |
4 | #[derive_const(Specifier)]
#[derive( Specifier)]
  |                     ^^^^^^^^^

error: previous `#[derive_const(Specifier)]` parameter here
 --> tests/ui/derive_specifier/duplicate_derive_1.rs:4:10
  |
4 | #[derive_const(Specifier)]
#[derive( Specifier)]
  |          ^^^^^^^^^
