tests/ui/derive_specifier/duplicate_derive_1.rs
use modular_bitfield::prelude::*;

#[bitfield]
#[derive_const(Specifier)]
#[derive( Specifier)]
pub struct SignedInt {
    sign: bool,
    value: B31,
}

fn main() {}
